@@ -24,7 +24,8 @@ REST API
 * New URI: "/studies/.../merge" to merge a study
 * New URI: "/studies/.../split" to split a study
 * POST-ing a DICOM file to "/instances" also answers the patient/study/series ID
-* GET /modalities/... now returns a JSON object instead of a JSON array
+* GET "/modalities/..." now returns a JSON object instead of a JSON array
+* New options to URI "/queries/.../answers": "?expand" and "?limit"
 
 Maintenance
 -----------
